[package]
name = "kin"
version = "0.1.0"
authors = ["Philip Crockett <contact@philcrockett.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.0"
serde = "1.0.82"
serde_json = "1.0.33"
serde_derive = "1.0.82"
rust_sodium-sys = "0.10.2"
structopt = "0.2.10"
quicli = "0.4.0"
failure = "0.1.3"
log = "0.4.6"
zip = "0.5.0"
