[package]
name = "kin_core"
version = "0.1.0"
authors = ["Philip Crockett <contact@philcrockett.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.0"
failure = "0.1.3"
log = "0.4.6"
mustache = "0.9.0"
pulldown-cmark = "0.2.0"
quicli = "0.4.0"
rpassword = "2.1.0"
rust_sodium-sys = "0.10.2"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
structopt = "0.2.10"
zip = { git = "https://github.com/mvdnes/zip-rs.git" }
