[package]
name = "kin_decrypt"
version = "0.1.0"
authors = ["Philip Crockett <contact@philcrockett.com>"]
edition = "2018"

[dependencies]
kin_core = { path = "../kin_core" }

[dependencies.nfd]
git = "https://github.com/saurvs/nfd-rs.git"
rev = "07578c5"

[[bin]]
name = "decrypt"
path = "src/main.rs"
